--- a/sample.html
+++ b/sample.html
@@ -22,6 +22,7 @@ sample<br>
 	<div><img src="img/03.jpg">03</div>
 	<div><img src="img/04.jpg">04</div>
 	<div><img src="img/05.jpg">05</div>
+    <div><img src="img/01.jpg">06</div>
 </div>
 
 </body>
